[package]
name = "wpa_passphrase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
pbkdf2 = { version = "0.11.0", features = ["simple", "sha1", "hmac"] }
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.20.0"
hex = "0.4.3"
sha1 = "0.10.5"
hmac = "0.12.1"

[dev-dependencies]
rstest = "0.16.0"

